--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cooperativa</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <!-- Barra de navegación -->
@@ -18,6 +19,12 @@
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
             <a class="nav-link" href="#inicio">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#prestamos">Préstamos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#reportes">Reportes</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#contacto">Contacto</a>
@@ -35,6 +42,49 @@
     <div class="container">
       <h1 class="display-4">Bienvenido a nuestra Cooperativa</h1>
       <p class="lead">Somos una comunidad comprometida con el desarrollo sostenible.</p>
+    </div>
+  </section>
+
+  <!-- Sección de préstamos -->
+  <section id="prestamos" class="py-5 bg-light">
+    <div class="container">
+      <h2>Registro de Préstamos</h2>
+      <form id="prestamoForm">
+        <div class="mb-3">
+          <label for="nombrePrestamo" class="form-label">Nombre del solicitante</label>
+          <input type="text" class="form-control" id="nombrePrestamo" required>
+        </div>
+        <div class="mb-3">
+          <label for="monto" class="form-label">Monto del préstamo</label>
+          <input type="number" class="form-control" id="monto" required>
+        </div>
+        <div class="mb-3">
+          <label for="fecha" class="form-label">Fecha de solicitud</label>
+          <input type="date" class="form-control" id="fecha" required>
+        </div>
+        <button type="submit" class="btn btn-success">Registrar préstamo</button>
+      </form>
+    </div>
+  </section>
+
+  <!-- Sección de reportes -->
+  <section id="reportes" class="py-5">
+    <div class="container">
+      <h2>Reportes</h2>
+      <div id="reportesContent">
+        <table class="table">
+          <thead>
+            <tr>
+              <th>Nombre</th>
+              <th>Monto</th>
+              <th>Fecha</th>
+            </tr>
+          </thead>
+          <tbody id="reportesTable">
+            <!-- Los reportes se cargarán aquí -->
+          </tbody>
+        </table>
+      </div>
     </div>
   </section>
 
