--- a/index.html
+++ b/index.html
@@ -1,50 +1,27 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Inicio - Cooperativa</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <title>COOPEPSAING</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-success">
-    <div class="container">
-      <a class="navbar-brand" href="index.html">Cooperativa</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="prestamos.html">Préstamos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="reportes.html">Reportes</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contacto.html">Contacto</a>
-          </li>
-          <li class="nav-item">
-            <button class="btn btn-danger" onclick="cerrarSesion()">Cerrar sesión</button>
-          </li>
-        </ul>
+  <div id="app">
+    <div id="auth-section">
       </div>
-    </div>
-  </nav>
+    <div id="main-content">
+      </div>
+  </div>
 
-  <section class="py-5">
-    <div class="container">
-      <h1 class="display-4">Bienvenido a nuestra Cooperativa</h1>
-      <p class="lead">Somos una comunidad comprometida con el desarrollo sostenible.</p>
-    </div>
-  </section>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.1.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.1.0/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.1.0/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
   <script src="firebase-config.js"></script>
+  <script src="modules/auth.js"></script>
+  <script src="modules/user.js"></script>
+  <script src="modules/loans.js"></script>
+  <script src="modules/savings.js"></script>
+  <script src="modules/communication.js"></script>
+  <script src="modules/admin.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
