--- a/prestamos.html
+++ b/prestamos.html
@@ -58,8 +58,8 @@
   <script src="https://www.gstatic.com/firebasejs/10.1.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.1.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.1.0/firebase-firestore.js"></script>
-  <script src="firebase-config.js"></script>
-  <script src="script.js"></script>
+  <script src="COOPEPSAING/firebase-config.js"></script>
+  <script src="COOPEPSAING/script.js"></script>
   <script>
     document.getElementById('prestamoForm').addEventListener('submit', (e) => {
       e.preventDefault();
