--- a/reportes.html
+++ b/reportes.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Reportes - Cooperativa</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="COOPEPSAING/styles.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-success">
@@ -51,12 +51,12 @@
     </div>
   </section>
 
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.1.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.1.0/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.1.0/firebase-firestore.js"></script>
-  <script src="firebase-config.js"></script>
-  <script src="script.js"></script>
+ <script ="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script ="https://www.gstatic.com/firebasejs/10.1.0/firebase-app.js"></script>
+  <script ="https://www.gstatic.com/firebasejs/10.1.0/firebase-auth.js"></script>
+  <script ="https://www.gstatic.com/firebasejs/10.1.0/firebase-firestore.js"></script>
+  <script ="COOPEPSAING/firebase-config.js"></script>
+  <script src="COOPEPSAING/script.js"></script>
   <script>
     function cargarReportes() {
       const reportesTable = document.getElementById('reportesTable');
