--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>COOPEPSAING</title>
-  <link rel="stylesheet" href="COOPEPSAING/styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div id="app">
@@ -15,13 +15,7 @@
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
-  <script src="COOPEPSAING/firebase-config.js"></script>
-  <script src="COOPEPSAING/modules/auth.js"></script>
-  <script src="COOPEPSAING/modules/user.js"></script>
-  <script src="COOPEPSAING/modules/loans.js"></script>
-  <script src="COOPEPSAING/modules/savings.js"></script>
-  <script src="COOPEPSAING/modules/communication.js"></script>
-  <script src="COOPEPSAING/modules/admin.js"></script>
-  <script src="COOPEPSAING/script.js"></script>
+  <script src="firebase-config.js"></script>
+  <script src="script.js" type="module"></script>
 </body>
 </html>
