--- a/index.html
+++ b/index.html
@@ -1,21 +1,60 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-  <title>COOPEPSAING</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Página web de COOPEPSAING, cooperativa de ahorro y crédito.">
+    <meta name="keywords" content="cooperativa, ahorro, crédito, COOPEPSAING">
+    <meta name="author" content="Tu nombre o el de la organización">
+    <title>COOPEPSAING</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- Estilos personalizados -->
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <div id="app">
-    <div id="auth-section">
-      </div>
-    <div id="main-content">
-      </div>
-  </div>
+    <!-- Barra de navegación -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">COOPEPSAING</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="prestamos.html">Préstamos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="reportes.html">Reportes</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
-  <script src="firebase-config.js"></script>
-  <script src="script.js" type="module"></script>
+    <!-- Contenido principal -->
+    <main class="container my-5">
+        <section class="text-center">
+            <h1>Bienvenido a COOPEPSAING</h1>
+            <p class="lead">Tu cooperativa de ahorro y crédito.</p>
+            <img src="assets/imágenes/logo.png" alt="Logo de COOPEPSAING" class="img-fluid my-4">
+            <a href="prestamos.html" class="btn btn-primary">Ver Préstamos</a>
+            <a href="reportes.html" class="btn btn-secondary">Ver Reportes</a>
+        </section>
+    </main>
+
+    <!-- Pie de página -->
+    <footer class="bg-light text-center py-4">
+        <p>&copy; 2023 COOPEPSAING. Todos los derechos reservados.</p>
+    </footer>
+
+    <!-- Bootstrap JS -->
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <!-- JavaScript personalizado -->
+    <script src="js/scripts.js"></script>
 </body>
 </html>
