--- a/prestamos.html
+++ b/prestamos.html
@@ -1,84 +1,45 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Préstamos - Cooperativa</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Préstamos - COOPEPSAING</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-success">
-    <div class="container">
-      <a class="navbar-brand" href="index.html">Cooperativa</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="prestamos.html">Préstamos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="reportes.html">Reportes</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contacto.html">Contacto</a>
-          </li>
-          <li class="nav-item">
-            <button class="btn btn-danger" onclick="cerrarSesion()">Cerrar sesión</button>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
-  <section class="py-5">
-    <div class="container">
-      <h2>Registro de Préstamos</h2>
-      <form id="prestamoForm">
-        <div class="mb-3">
-          <label for="nombrePrestamo" class="form-label">Nombre del solicitante</label>
-          <input type="text" class="form-control" id="nombrePrestamo" required>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">COOPEPSAING</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="prestamos.html">Préstamos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="reportes.html">Reportes</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="mb-3">
-          <label for="monto" class="form-label">Monto del préstamo</label>
-          <input type="number" class="form-control" id="monto" required>
-        </div>
-        <div class="mb-3">
-          <label for="fecha" class="form-label">Fecha de solicitud</label>
-          <input type="date" class="form-control" id="fecha" required>
-        </div>
-        <button type="submit" class="btn btn-success">Registrar préstamo</button>
-      </form>
-    </div>
-  </section>
+    </nav>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.1.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.1.0/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.1.0/firebase-firestore.js"></script>
-  <script src="COOPEPSAING/firebase-config.js"></script>
-  <script src="COOPEPSAING/script.js"></script>
-  <script>
-    document.getElementById('prestamoForm').addEventListener('submit', (e) => {
-      e.preventDefault();
-      const nombre = document.getElementById('nombrePrestamo').value;
-      const monto = document.getElementById('monto').value;
-      const fecha = document.getElementById('fecha').value;
+    <main class="container my-5">
+        <h1>Préstamos</h1>
+        <p>Información sobre nuestros servicios de préstamos.</p>
+    </main>
 
-      // Guardar en Firestore
-      db.collection('prestamos').add({
-        nombre,
-        monto,
-        fecha
-      }).then(() => {
-        alert('Préstamo registrado correctamente.');
-        document.getElementById('prestamoForm').reset();
-      }).catch((error) => {
-        console.error('Error al registrar el préstamo:', error);
-      });
-    });
-  </script>
+    <footer class="bg-light text-center py-4">
+        <p>&copy; 2023 COOPEPSAING. Todos los derechos reservados.</p>
+    </footer>
+
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
