--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
   <script src="firebase-config.js"></script>
-  <script src="modules/auth.js"></script>
-  <script src="modules/user.js"></script>
-  <script src="modules/loans.js"></script>
-  <script src="modules/savings.js"></script>
-  <script src="modules/communication.js"></script>
-  <script src="modules/admin.js"></script>
+  <script src="auth.js"></script>
+  <script src="user.js"></script>
+  <script src="loans.js"></script>
+  <script src="savings.js"></script>
+  <script src="communication.js"></script>
+  <script src="admin.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
