--- a/index.html
+++ b/index.html
@@ -7,9 +7,26 @@
 <body>
   <div id="app">
     <div id="auth-section">
-      </div>
+      <h2>Iniciar Sesión</h2>
+      <form id="login-form">
+        <input type="email" id="login-email" placeholder="Correo Electrónico" required>
+        <input type="password" id="login-password" placeholder="Contraseña" required>
+        <button type="submit">Iniciar Sesión</button>
+      </form>
+
+      <h2>Registrarse</h2>
+      <form id="register-form">
+        <input type="email" id="register-email" placeholder="Correo Electrónico" required>
+        <input type="password" id="register-password" placeholder="Contraseña" required>
+        <button type="submit">Registrarse</button>
+      </form>
+    </div>
+
     <div id="main-content">
-      </div>
+      <h2>Bienvenido a COOPEPSAING</h2>
+      <p>Esta es la página de inicio de la cooperativa.</p>
+      <p>Aquí puedes encontrar información sobre nuestros servicios, noticias, etc.</p>
+    </div>
   </div>
 
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
